objects/Answer__c.object
<CustomObject>
    <description>This is a master detail object to contact which is related to Campaigns, Questions and Campaign Member</description>
    <fields>
        <fullName>Answer_Date__c</fullName>
        <description>This field contains the date when the answer is given.</description>
        <label>Answer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Answer_Typ__c</fullName>
        <description>Displays if Answer is in Category Promoter, Detractor or Neutral</description>
        <formula>CASE( TEXT(Answer__c),
&quot;&quot;, &quot;Not Applicable&quot;, 
&quot;7&quot;, &quot;Neutral&quot;, 
&quot;8&quot;, &quot;Neutral&quot;, 
&quot;9&quot;, &quot;Promoter&quot;, 
&quot;10&quot;, &quot;Promoter&quot;, 

&quot;Detractor&quot;)</formula>
        <label>Answer_Typ</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Answer_Value__c</fullName>
        <formula>VALUE(TEXT( Answer__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Answer Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Answer__c</fullName>
        <label>Answer</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Answer_txt__c</fullName>
        <label>Answer Comment</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Appliance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Appliance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Campaign_Name__c</fullName>
        <formula>Campaign__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Start_Date__c</fullName>
        <formula>Campaign__r.StartDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_Status__c</fullName>
        <formula>TEXT( Campaign__r.Status )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Total_Contacts__c</fullName>
        <formula>Campaign__r.NumberOfContacts</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Total Contacts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Total_Responses__c</fullName>
        <formula>Campaign__r.NumberOfResponses</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Total Responses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Campaign_Type__c</fullName>
        <formula>Text( Campaign__r.Type )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Campaign Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>LKP relationship to Campaign</description>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <description>This is a MD relationship for Contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Current__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flags the latest answer</description>
        <label>Current</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Detractor_Count__c</fullName>
        <formula>IF( ISPICKVAL(Question__r.Question_Type__c, &quot;0...10&quot;) , IF( VALUE(TEXT(Answer__c)) &lt;= 6, 1, 0 ), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Detractor Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Global_Account__c</fullName>
        <formula>IF(NOT(ISBLANK(Contact__r.Account.GAMCD__c)), Contact__r.Account.Parent.Name , &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Global Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NPS_Score__c</fullName>
        <formula>IF(Question__r.Name = &quot;1. NPS overall score&quot;,  TEXT(Answer__c), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>NPS Score</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Neutral_Count__c</fullName>
        <formula>IF(ISPICKVAL(Question__r.Question_Type__c, &quot;0...10&quot;) , IF( AND(VALUE(TEXT(Answer__c)) &gt;= 7, VALUE(TEXT(Answer__c)) &lt;= 8) , 1, 0 ), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Neutral Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Not_Applicable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox shows that the survey member has no answer to that language.</description>
        <label>Not Applicable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previous_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This box will be checked, when a new Survey will be flagged as &quot;current survey&quot;</description>
        <label>Previous Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Previous_Value__c</fullName>
        <label>Previous Value</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promotor_Count__c</fullName>
        <formula>IF( ISPICKVAL(Question__r.Question_Type__c, &quot;0...10&quot;) , IF( VALUE(TEXT(Answer__c)) &gt;= 9, 1, 0 ), NULL)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Promotor Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question_Category__c</fullName>
        <formula>TEXT(Question__r.Category__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Short_Name__c</fullName>
        <formula>Question__r.Question_Short_Name__c</formula>
        <label>Question Short Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Type__c</fullName>
        <formula>TEXT( Question__r.Question_Type__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Question Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <description>Answer for Survey-Questions</description>
        <label>Question</label>
        <referenceTo>Question__c</referenceTo>
        <relationshipLabel>Answers</relationshipLabel>
        <relationshipName>Answers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Related_Question__c</fullName>
        <description>This field is used for related list</description>
        <formula>Question__r.EN_Question__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Question</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Count__c</fullName>
        <formula>Campaign__r.NumberOfResponses</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Response Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Survey_Name_Survey_Question__c</fullName>
        <label>Survey Name - Survey Question</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_date__c</fullName>
        <formula>Campaign__r.Survey_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Id,IMAGE(&quot;/img/icon/tasks16.gif&quot;,&quot;View&quot;),&quot;_parent&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Answer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Question__c</columns>
        <columns>Promotor_Count__c</columns>
        <columns>Detractor_Count__c</columns>
        <columns>Answer_Date__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>Answer Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>